--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://sdk.panl.so/panl.js" data-app-id="P-1MJJSVBE"></script>
   </body>
 </html>
