--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="preload" as="image" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://sdk.panl.so/panl.js" data-app-id="P-1MJJSVBE"></script>
     <title>College39Bot</title>
